# git-bump

./: .git-bump.lua  .lua-format  CHANGES.md  Cargo.toml  LICENSE  README.md  VERSION
.github/: env
.github/scripts/: create-checksums  strip-and-package
.github/workflows/: release.yml  test.yml
src/: cli.rs  error.rs  lib.rs  main.rs  state.rs
