[package]
name = "git-bump"
version = "0.1.0"
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2021"

description = "Use Lua scripts to quickly bump versions in files."
repository = "https://github.com/FloGa/git-bump"
readme = "README.md"
categories = ["cli", "git", "utility"]
license = "MIT"

[dependencies]
git2 = { version = "0.14.2", default-features = false }
home = "0.5.3"
mlua = { version = "0.7", features = ["lua54", "vendored"] }
thiserror = "1.0.30"
