[package]
name = "git-bump"
version = "0.3.1"
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2021"

description = "Use Lua scripts to quickly bump versions in files."
repository = "https://github.com/FloGa/git-bump"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "git", "utility"]
license = "MIT"

include = ["src/**/*", "LICENSE", "README.md", ".git-bump.lua"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
git2 = { version = "0.20.4", default-features = false }
home = "0.5.3"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
thiserror = "2.0.18"
